[tool.poetry]
name = "parlaygenie"
version = "0.1.0"
description = ""
authors = ["Clarkbar36 <alexclark36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
